@@ -143,20 +143,54 @@ typedef enum {
     PSLR_DRIVE_MODE_MAX
 } pslr_drive_mode_t;
 
-
 typedef enum {
-    PSLR_EXPOSURE_MODE_GREEN = 1,
     PSLR_EXPOSURE_MODE_P = 0 ,
-    PSLR_EXPOSURE_MODE_SV = 15,
+    PSLR_EXPOSURE_MODE_GREEN = 1,
+//    PSLR_EXPOSURE_MODE_HYP = 2,
+//    PSLR_EXPOSURE_MODE_AUTO_PICT = 1,
+//    PSLR_EXPOSURE_MODE_GREEN = 3, maybe 1 is AUTO_PICT
     PSLR_EXPOSURE_MODE_TV = 4,
     PSLR_EXPOSURE_MODE_AV = 5,
-    PSLR_EXPOSURE_MODE_TAV, // ?
+//    PSLR_EXPOSURE_MODE_TV_SHIFT = 6, //?
+//    PSLR_EXPOSURE_MODE_AV_SHIFT = 7, //?
     PSLR_EXPOSURE_MODE_M = 8,
     PSLR_EXPOSURE_MODE_B = 9,
-    PSLR_EXPOSURE_MODE_X, // ?   
-    PSLR_EXPOSURE_MODE_MAX = 16
-
+//    PSLR_EXPOSURE_MODE_AV_OFFAUTO = 10, //?
+//    PSLR_EXPOSURE_MODE_M_OFFAUTO = 11, //?
+//    PSLR_EXPOSURE_MODE_B_OFFAUTO = 12, //?
+    PSLR_EXPOSURE_MODE_TAV = 13, // ?
+    PSLR_EXPOSURE_MODE_SV = 15,
+    PSLR_EXPOSURE_MODE_X = 16, // ?   
+    PSLR_EXPOSURE_MODE_MAX = 17
 } pslr_exposure_mode_t;
+
+typedef enum {
+    PSLR_EXPOSURE_SUBMODE_NONE = 0,
+    PSLR_EXPOSURE_SUBMODE_HISPEED = 1,
+    PSLR_EXPOSURE_SUBMODE_DOF = 2,
+    PSLR_EXPOSURE_SUBMODE_MTF = 3,
+    PSLR_EXPOSURE_SUBMODE_STANDARD = 4,
+    PSLR_EXPOSURE_SUBMODE_PORTRAIT = 5,
+    PSLR_EXPOSURE_SUBMODE_LANDSCAPE = 6,
+    PSLR_EXPOSURE_SUBMODE_MACRO = 7,
+    PSLR_EXPOSURE_SUBMODE_SPORT = 8,
+    PSLR_EXPOSURE_SUBMODE_NIGHTSCENEPORTRAIT = 9,
+    PSLR_EXPOSURE_SUBMODE_NOFLASH = 10,
+    PSLR_EXPOSURE_SUBMODE_NIGHTSCENE = 11,
+    PSLR_EXPOSURE_SUBMODE_SURFANDSNOW = 12,
+    PSLR_EXPOSURE_SUBMODE_TEXT = 13,
+    PSLR_EXPOSURE_SUBMODE_SUNSET = 14,
+    PSLR_EXPOSURE_SUBMODE_KIDS = 15,
+    PSLR_EXPOSURE_SUBMODE_PET = 16,
+    PSLR_EXPOSURE_SUBMODE_CANDLELIGHT = 17,
+    PSLR_EXPOSURE_SUBMODE_MUSEUM = 18,
+    PSLR_EXPOSURE_SUBMODE_FOOD = 19,
+    PSLR_EXPOSURE_SUBMODE_STAGE = 20,
+    PSLR_EXPOSURE_SUBMODE_NIGHTSNAP = 21,
+    PSLR_EXPOSURE_SUBMODE_SWALLOWDOF = 22,
+    PSLR_EXPOSURE_SUBMODE_MAX
+} pslr_exposure_submode_t;
+
 
 typedef enum {
     PSLR_GUI_EXPOSURE_MODE_GREEN,
@@ -275,6 +309,7 @@ typedef struct {
     uint32_t custom_ev_steps;
     uint32_t custom_sensitivity_steps;
     uint32_t exposure_mode;
+    uint32_t exposure_submode;
     uint32_t user_mode_flag;
     uint32_t ae_metering_mode;
     uint32_t af_mode;
